Fixes background on iOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -149,6 +149,7 @@ p {
     justify-content: center;
     flex-direction: column;
     background: url('./images/background-portrait.jpg') no-repeat center center fixed;
+    background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
